--- a/CSClass/CSClass.csproj
+++ b/CSClass/CSClass.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sample.cs" />
     <Compile Include="SingleTon.cs" />
     <Compile Include="Student.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
