--- a/CSClass/CSClass.csproj
+++ b/CSClass/CSClass.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="Box.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="Dictioniary.cs" />
+    <Compile Include="Finbonacci.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
