--- a/CSClass/CSClass.csproj
+++ b/CSClass/CSClass.csproj
@@ -46,9 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animal.cs" />
     <Compile Include="Box.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="Cat.cs" />
     <Compile Include="Dictioniary.cs" />
+    <Compile Include="Dog.cs" />
     <Compile Include="Finbonacci.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
